# PythonProject1

./: .gitignore  pyproject.toml
src/: locators.toml  main.py
src/helpers/: config.py
